--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --font-header1:rgb(136, 74, 133);
     --fea-box: #fff9f9;
     --cost-color:  rgb(136, 74, 133)rgb(136, 74, 133);
-    --Hero-img: linear-gradient(rgba(54, 5, 38, 0.3),rgba(46, 4, 24, 0.7)),url("imagesedu/pngwing.com (1).png");
+    --Hero-img: linear-gradient(rgba(54, 5, 38, 0.3),rgba(46, 4, 24, 0.7)),url("./imagesedu/pngwing.com (1).png");
 }
 *{
     margin: 0;
@@ -479,7 +479,7 @@ footer .copyright .pro-links i:hover{
 /* about */
 #about-home{
 background: linear-gradient(rgba(9, 5, 54, 0.3),rgba(5,4,46,0.7)),
-url("imagesedu/pngwing.com (2).png");
+url("./imagesedu/pngwing.com (2).png");
     width: 100%;
     height: 60vh;
     background-size: cover;
@@ -1040,7 +1040,7 @@ margin-bottom: 20px;
 #contact .getin h2{
     color: #2c234d;
     font-size: 30px;
-    font-weight: 800;
+    font-weight: 800; 
     line-height: .8;
     margin-bottom: 16px;
 }
